# Rust-vue-Project

./: README.md
backend/: .env  Cargo.toml
backend/.sqlx/: query-57f6668b1fb93316e1beff8c2189a59da3a34995afc962a4704bc7d196a159f3.json  query-dfaaf5469c20718a37d92f86ce7abeecf80d5c3bd788993bd07ddceada51d881.json
backend/src/: handlers.rs  main.rs  models.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js
frontend/src/components/: HomePage.vue  RegistrationComponent.vue
frontend/src/router/: index.js
