[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "mysql", "chrono" ] }
dotenvy = "0.15.7"
bcrypt = "0.17"
validator = { version = "0.20", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
